--- a/image-factory/bundle-trusty-vpn(site2site)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/heat/bundle-trusty-vpn.heat.yml
@@ -192,75 +192,76 @@ resources:
         - ip_address: { "Fn::Replace": [ {'.0/24': '.100'}, {get_param: client_cidr} ] }
         #- subnet_id: { get_resource: subnet2 }
 
-  serverlanserver:
-    type: OS::Nova::Server
-    properties:
-      key_name: { get_resource: my_key }
-      image: { get_param: image }
-      flavor: { get_param: flavor_name }
-      networks:
-        - network: {get_resource: network}
-      security_groups:
-        - { get_resource: security_group }
-      user_data_format: RAW
-      user_data:
-        str_replace:
-          template: |
-            #!/usr/bin/env bash
-            sudo mkdir /home/cloud/config
-            sudo chown -R cloud:cloud /home/cloud/config
-            echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
-            echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
-            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
-            #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
-            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
-            #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
-            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw.tmp
-            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw_df.tmp
-            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw.tmp
-            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw_df.tmp
-            sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
-            sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
-            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanserver.yml
-          params:
-            $server_cidr$: {get_param: server_cidr}
-            $client_cidr$: {get_param: client_cidr}
+  #serverlanserver:
+  #  type: OS::Nova::Server
+  #  properties:
+  #    key_name: { get_resource: my_key }
+  #    image: { get_param: image }
+  #    flavor: { get_param: flavor_name }
+  #    networks:
+  #      - network: {get_resource: network}
+  #    security_groups:
+  #      - { get_resource: security_group }
+  #    user_data_format: RAW
+  #    user_data:
+  #      str_replace:
+  #        template: |
+  #          #!/usr/bin/env bash
+  #          sudo mkdir /home/cloud/config
+  #          sudo chown -R cloud:cloud /home/cloud/config
+  #          echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
+  #          echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
+  #          sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
+  #          #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
+  #          sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
+  #          #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
+  #          cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw.tmp
+  #          cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw_df.tmp
+  #          sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw.tmp
+  #          sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw_df.tmp
+  #          sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
+  #          sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
+  #          git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+  #          sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanserver.yml
+  #        params:
+  #          $server_cidr$: {get_param: server_cidr}
+  #          $client_cidr$: {get_param: client_cidr}
 
-  serverlanclient:
-    type: OS::Nova::Server
-    properties:
-      key_name: { get_resource: my_key }
-      image: { get_param: image }
-      flavor: { get_param: flavor_name }
-      networks:
-        - network: {get_resource: network2}
-      security_groups:
-        - { get_resource: security_group }
-      user_data_format: RAW
-      user_data:
-        str_replace:
-          template: |
-            #!/usr/bin/env bash
-            sudo mkdir /home/cloud/config
-            sudo chown -R cloud:cloud /home/cloud/config
-            echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
-            echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
-            cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw.tmp
-            cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw_df.tmp
-            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
-            #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
-            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
-            #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
-            sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw.tmp
-            sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw_df.tmp
-            sed -i -e "s/0:24/100/g" /home/cloud/config/client_cidr_gw.tmp
-            sed -i -e "s/0:24/1/g"  /home/cloud/config/client_cidr_gw_df.tmp
-            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanclient.yml
-          params:
-            $server_cidr$: {get_param: server_cidr}
-            $client_cidr$: {get_param: client_cidr}
+  #serverlanclient:
+  #  type: OS::Nova::Server
+  #  properties:
+  #    key_name: { get_resource: my_key }
+  #    image: { get_param: image }
+  #    flavor: { get_param: flavor_name }
+  #    networks:
+  #      - network: {get_resource: network2}
+  #    security_groups:
+  #      - { get_resource: security_group }
+  #    user_data_format: RAW
+  #    user_data:
+  #      str_replace:
+  #        template: |
+  #          #!/usr/bin/env bash
+  #          sudo mkdir /home/cloud/config
+  #          sudo chown -R cloud:cloud /home/cloud/config
+  #          echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
+  #          echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
+  #          cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw.tmp
+  #          cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw_df.tmp
+  #          sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
+  #          #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
+  #          sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
+  #          #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
+  #          sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw.tmp
+  #          sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw_df.tmp
+  #          sed -i -e "s/0:24/100/g" /home/cloud/config/client_cidr_gw.tmp
+  #          sed -i -e "s/0:24/1/g"  /home/cloud/config/client_cidr_gw_df.tmp
+  #          git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+  #          sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanclient.yml
+  #        params:
+  #          $server_cidr$: {get_param: server_cidr}
+  #          $client_cidr$: {get_param: client_cidr}
+
   server:
     type: OS::Nova::Server
     properties:
