--- a/image-factory/bundle-trusty-vpn-spawn-server/heat/addinstancelanserver.yml
+++ b/image-factory/bundle-trusty-vpn-spawn-server/heat/addinstancelanserver.yml
@@ -16,7 +16,7 @@ parameters:
     default: "Ubuntu 14.04"
 
   flavor:
-    default: s1.cw.small-1
+    default: n1.cw.standard-2
     description: Flavor to use for the deployed instance
     type: string
     label: Instance Type (Flavor)
@@ -46,7 +46,11 @@ parameters:
     default:
 
   server_cidr:
-    description: /24 cidr of local subnet
+    description: /24 cidr of server subnet
+    type: string
+
+  client_cidr:
+    description: /24 cidr of client subnet
     type: string
 
 resources:
@@ -64,10 +68,33 @@ resources:
         str_replace:
           template: |
             #!/usr/bin/env bash
-            sudo route del -net "$server_cidr$" dev eth0
-            sudo route add -net "$server_cidr$" dev eth0
+            export DEBIAN_FRONTEND=noninteractive
+            apt-get update 2>&1 >> /var/log/vpn_srv.log
+            echo "$(date) - update done" >> /var/log/vpn_srv.log
+            apt-get -o Dpkg::Options::="--force-confold" upgrade -y 2>&1 >> /var/log/vpn_srv.log
+            echo "$(date) - upgrade done" >> /var/log/vpn_srv.log
+            apt-get -o Dpkg::Options::="--force-confold" install openvpn -y 2>&1 >> /var/log/vpn_srv.log
+            echo "$(date) - openvpn done" >> /var/log/vpn_srv.log
+            mkdir /etc/ansible
+            echo "[local]" >> /etc/ansible/hosts
+            echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
+            cd /home/cloud/
+            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
+            sudo mkdir /home/cloud/config
+            sudo chown -R cloud:cloud /home/cloud/config
+            echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
+            echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
+            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
+            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
+            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw.tmp
+            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw_df.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw_df.tmp
+            sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
+            sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
           params:
             $server_cidr$: {get_param: server_cidr}
+            $client_cidr$: {get_param: client_cidr}
 
   server_port:
     type: OS::Neutron::Port
@@ -90,6 +117,7 @@ resources:
         - { direction: egress, protocol: UDP }
 
 outputs:
+  
   server_private_ip:
     description: IP address of client in private network
     value: { get_attr: [ server, first_address ] }
