--- a/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
@@ -89,11 +89,7 @@ parameters:
 
 resources:
 
-  my_key:
-    type: OS::Nova::KeyPair
-    properties:
-      save_private_key: true
-      name: my_key
+
 
   network:
     type: OS::Neutron::Net
@@ -166,7 +162,7 @@ resources:
   serverlanserver:
     type: OS::Nova::Server
     properties:
-      key_name: { get_resource: my_key }
+      key_name: { get_param: keypair_name }
       image: { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
@@ -191,7 +187,7 @@ resources:
             sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
             sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
             git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2lanserver.yml
+            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn\(randomwarrior\)/ansible/bootstrap2lanserver.yml
           params:
             $server_cidr$: {get_param: server_cidr}
             $client_cidr$: {get_param: client_cidr}
@@ -212,8 +208,8 @@ resources:
             sudo mkdir /etc/vpnconf/
             sudo mkdir /home/cloud/config
             sudo chown -R cloud:cloud /home/cloud/config
-            echo -n "$ssh_key_priv$" >> /home/cloud/.ssh/my_key.pem
-            echo -n "$ssh_key_pub$" >> /home/cloud/.ssh/authorized_keys
+            #echo -n "$ssh_key_priv$" >> /home/cloud/.ssh/my_key.pem
+            #echo -n "$ssh_key_pub$" >> /home/cloud/.ssh/authorized_keys
             echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
             echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
             sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
@@ -245,7 +241,7 @@ resources:
             ssh-keygen -t rsa
             cd /home/cloud/
             git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap2server.yml
+            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn\(randomwarrior\)/ansible/bootstrap2server.yml
           params:
             $COUNTRY$: { get_param: COUNTRY }
             $PROVINCE$: { get_param: PROVINCE }
@@ -274,11 +270,3 @@ outputs:
   server_id:
     description: ID of the server
     value: {get_resource: server}
-
-  private_key:
-    description: Private key
-    value: { get_attr: [ my_key, private_key ] }
-
-  public_key:
-    description: Public_key
-    value: { get_attr: [ my_key, public_key ] }
