--- a/image-factory/bundle-trusty-vpn-spawn-client/heat/addinstancelanclient.yml
+++ b/image-factory/bundle-trusty-vpn-spawn-client/heat/addinstancelanclient.yml
@@ -54,10 +54,22 @@ parameters:
     type: string
 
 resources:
+
+  floating_ip:
+    type: OS::Neutron::FloatingIP
+    properties:
+      floating_network_id: {get_param: public_net_id}
+
+  floating_ip_link:
+    type: OS::Nova::FloatingIPAssociation
+    properties:
+      floating_ip: { get_resource: floating_ip }
+      server_id: { get_resource: client }
+
   client:
     type: OS::Nova::Server
     properties:
-      name: Client
+      name: Lan-client
       image: { get_param: image }
       flavor: { get_param: flavor }
       key_name: { get_param: key_name }
