--- a/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/ansible/roles/vpn_static_client/tasks/main.yml
@@ -88,7 +88,7 @@
     sudo /sbin/iptables -A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
     sudo /sbin/iptables -A FORWARD -i eth0 -o tun0 -j ACCEPT
     sudo rm -r CLOUDPATT
-    sudo rm -r config
+    #sudo rm -r config
 
 - name: adding route
   args:
@@ -96,4 +96,4 @@
     executable: /bin/bash
   shell: |
     sudo sleep 30
-    sudo route add -net {{server_cidr}}/24 dev tun0
+    sudo route add -net {{server_cidr}}/24  dev tun0
