--- a/image-factory/bundle-trusty-vpn-spawn-client/ansible/roles/vpn_static_lan_client/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn-spawn-client/ansible/roles/vpn_static_lan_client/tasks/main.yml
@@ -8,4 +8,4 @@
     sudo route add -net {{server_cidr}}/24 gw {{client_cidr_gw}}
     cd /home/cloud/
     sudo rm -r CLOUDPATT
-    sudo rm -r config
+    #sudo rm -r config
