--- a/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/heat/bundle-trusty-vpn.heat.yml
@@ -89,13 +89,17 @@ parameters:
 
 resources:
 
-
+  my_key:
+    type: OS::Nova::KeyPair
+    properties:
+      save_private_key: true
+      name: my_key
 
   network:
     type: OS::Neutron::Net
 
-  network2:
-    type: OS::Neutron::Net
+  #network2:
+  #  type: OS::Neutron::Net
 
   subnet:
     type: OS::Neutron::Subnet
@@ -162,7 +166,7 @@ resources:
   serverlanserver:
     type: OS::Nova::Server
     properties:
-      key_name: { get_param: keypair_name }
+      key_name: { get_resource: my_key }
       image: { get_param: image }
       flavor: { get_param: flavor_name }
       networks:
@@ -208,14 +212,10 @@ resources:
             sudo mkdir /etc/vpnconf/
             sudo mkdir /home/cloud/config
             sudo chown -R cloud:cloud /home/cloud/config
-            #echo -n "$ssh_key_priv$" >> /home/cloud/.ssh/my_key.pem
-            #echo -n "$ssh_key_pub$" >> /home/cloud/.ssh/authorized_keys
+            echo -n "$ssh_key_priv$" >> /home/cloud/.ssh/my_key.pem
+            echo -n "$ssh_key_pub$" >> /home/cloud/.ssh/authorized_keys
             echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
-            echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
             sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
-            #mv /home/cloud/config/server_cidr.tmp /home/cloud/config/server_cidr
-            sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
-            #mv /home/cloud/config/client_cidr.tmp /home/cloud/config/client_cidr
             cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw.tmp
             cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw_df.tmp
             sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw.tmp
@@ -250,7 +250,6 @@ resources:
             $EMAIL$:  { get_param: EMAIL }
             $ssh_key_priv$: { get_attr: [ my_key, private_key ] }
             $ssh_key_pub$: { get_attr: [ my_key, public_key ] }
-            $client_cidr$: {get_param: client_cidr}
             $server_cidr$: {get_param: server_cidr}
 
 
@@ -270,3 +269,19 @@ outputs:
   server_id:
     description: ID of the server
     value: {get_resource: server}
+
+  subnet_server_id:
+    description: ID of the private subnet associate to the server
+    value: {get_resource: subnet}
+
+  network_server_id:
+    description: ID of the private network associate to the server
+    value: {get_resource: network}
+
+  private_key:
+    description: Private key
+    value: { get_attr: [ my_key, private_key ] }
+
+  public_key:
+    description: Public_key
+    value: { get_attr: [ my_key, public_key ] }
