--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -138,24 +138,6 @@
     group=cloud
     mode=0644
 
-#ccd
-- name: create keys folder ccd
-  file:
-    path=/etc/openvpn/ccd
-    state=directory
-    owner=cloud
-    group=cloud
-    recurse=yes
-
-
-#client1
-- name: configuration ccd
-  copy:
-    src=roles/vpn_static_server/files/client1
-    dest=/etc/openvpn/ccd/client1
-    owner=root
-    group=root
-    mode=0755
 
 #ufw
 - name: before.rules configuration
@@ -290,29 +272,6 @@
     regexp='#AUTOSTART="all"'
     replace='AUTOSTART="all"'
 
-- name: setting server.conf 1
-  replace:
-    dest=/etc/openvpn/server.conf
-    regexp='route X.X.X.X 255.255.255.0'
-    replace='route {{client_cidr}} 255.255.255.0'
-
-- name: setting server.conf 2
-  replace:
-    dest=/etc/openvpn/server.conf
-    regexp='push "X.X.X.X 255.255.255.0"'
-    replace='push "{{server_cidr}} 255.255.255.0"'
-
-- name: setting server.conf 3
-  replace:
-    dest=/etc/openvpn/server.conf
-    regexp='push "X.X.X.X.X 255.255.255.0"'
-    replace='push "{{client_cidr}} 255.255.255.0"'
-
-- name: setting client1
-  replace:
-    dest=/etc/openvpn/ccd/client1
-    regexp='iroute X.X.X.X 255.255.255.0'
-    replace='iroute {{client_cidr}} 255.255.255.0'
 
 - name: change ownership and right my_key.pem
   file:
@@ -321,20 +280,20 @@
     group=cloud
     mode=600
 
-- name: copy config client
+- name: route setting up
   args:
     chdir: /etc/openvpn/
     executable: /bin/bash
   shell: |
     sudo route del -net {{client_cidr}} netmask 255.255.255.0 gw {{server_cidr_gw_df}}
     sudo service openvpn restart
+    sudo sleep 30
+    sudo route add -net {{client_cidr}}/24 dev tun0
 
 - name: cleaning
   args:
     chdir: /home/cloud
     executable: /bin/bash
   shell: |
-    sudo sleep 30
-    sudo route add -net {{client_cidr}}/24 dev tun0
     sudo rm -r CLOUDPATT
     sudo rm -r config
