--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/vars/main.yml
@@ -5,8 +5,8 @@ PROVINCE:  "{{ lookup('file', '/etc/vpnconf/PROVINCE') }}"
 CITY: "{{ lookup('file', '/etc/vpnconf/CITY') }}"
 ORGANISATION: "{{ lookup('file', '/etc/vpnconf/ORGANISATION') }}"
 EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
-client_cidr: "{{ lookup('file', '/home/cloud/config/client_cidr.tmp') }}"
+#client_cidr: "{{ lookup('file', '/home/cloud/config/client_cidr.tmp') }}"
 server_cidr: "{{ lookup('file', '/home/cloud/config/server_cidr.tmp') }}"
 server_cidr_gw: "{{ lookup('file', '/home/cloud/config/server_cidr_gw.tmp') }}"
 server_cidr_gw_df: "{{ lookup('file', '/home/cloud/config/server_cidr_gw_df.tmp') }}"
-client_cidr_gw: "{{ lookup('file', '/home/cloud/config/client_cidr_gw.tmp') }}"
+#client_cidr_gw: "{{ lookup('file', '/home/cloud/config/client_cidr_gw.tmp') }}"
