--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_lan_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_lan_server/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: extract config client
+- name: route setting up 
   args:
     chdir: /etc/openvpn/configclient
     executable: /bin/bash
