--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/tasks/main.yml
@@ -255,23 +255,30 @@
     mkdir configclient
     sudo cp /etc/openvpn/easy-rsa/keys/client1.key /etc/openvpn/
     sudo cp /etc/openvpn/easy-rsa/keys/client1.crt /etc/openvpn/
-    mv client1.crt configclient
-    mv client1.key configclient
+    sudo mv client1.crt configclient
+    sudo mv client1.key configclient
     sudo cp ta.key configclient
     sudo cp ca.crt configclient
     mv client.conf configclient
-    rm client.conf
-    tar czvf configclient.tar.gz configclient
-    sudo rm -r configclient
-    chown cloud configclient.tar.gz
-    chmod 755 configclient.tar.gz
-    chgrp cloud configclient.tar.gz
     
 - name: modification configclient
   replace:
     dest=/etc/openvpn/configclient/client.conf
     regexp='X.X.X.X'
     replace='{{ip_server}}'
+
+- name: pack config client
+  args:
+    chdir: /etc/openvpn/
+    executable: /bin/bash
+  shell: |
+    tar czvf configclient.tar.gz configclient
+    sudo rm -r configclient
+    chown cloud configclient.tar.gz
+    chmod 755 configclient.tar.gz
+    chgrp cloud configclient.tar.gz
+
+
 
 - name: setting openvpn autostart
   replace:
