--- a/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/vars/main.yml
+++ b/image-factory/bundle-trusty-vpn(randomwarrior)/ansible/roles/vpn_static_server/vars/main.yml
@@ -10,3 +10,4 @@ server_cidr: "{{ lookup('file', '/home/cloud/config/server_cidr.tmp') }}"
 server_cidr_gw: "{{ lookup('file', '/home/cloud/config/server_cidr_gw.tmp') }}"
 server_cidr_gw_df: "{{ lookup('file', '/home/cloud/config/server_cidr_gw_df.tmp') }}"
 #client_cidr_gw: "{{ lookup('file', '/home/cloud/config/client_cidr_gw.tmp') }}"
+ip_server: "{{ lookup('file', '/home/cloud/config/ip_server') }}"
