--- a/image-factory/bundle-trusty-vpn-spawn-server-s2s/heat/addinstancelanserver.yml
+++ b/image-factory/bundle-trusty-vpn-spawn-server-s2s/heat/addinstancelanserver.yml
@@ -1,7 +1,7 @@
 heat_template_version: 2013-05-23
 
 description: >
-  HOT template to deploy one instance into the existing VPN Client Lan
+  HOT template to deploy one instance into the existing VPN Server Lan
 
 parameters:
 
@@ -55,21 +55,10 @@ parameters:
 
 resources:
 
-  floating_ip:
-    type: OS::Neutron::FloatingIP
-    properties:
-      floating_network_id: {get_param: public_net_id}
-
-  floating_ip_link:
-    type: OS::Nova::FloatingIPAssociation
-    properties:
-      floating_ip: { get_resource: floating_ip }
-      server_id: { get_resource: client }
-
-  client:
+  server:
     type: OS::Nova::Server
     properties:
-      name: Lan-client
+      name: Lan-server
       image: { get_param: image }
       flavor: { get_param: flavor }
       key_name: { get_param: key_name }
@@ -90,25 +79,24 @@ resources:
             mkdir /etc/ansible
             echo "[local]" >> /etc/ansible/hosts
             echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
+            cd /home/cloud/
             sudo mkdir /home/cloud/config
             sudo chown -R cloud:cloud /home/cloud/config
             echo -n "$client_cidr$" >> /home/cloud/config/client_cidr
             echo -n "$server_cidr$" >> /home/cloud/config/server_cidr
             sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/server_cidr > /home/cloud/config/server_cidr.tmp
             sed 's/\(.*\)\/.*/\1/' < /home/cloud/config/client_cidr > /home/cloud/config/client_cidr.tmp
-            cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw.tmp
-            cp /home/cloud/config/client_cidr /home/cloud/config/client_cidr_gw_df.tmp
-            sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw.tmp
-            sed -i -e "s/\//:/g"  /home/cloud/config/client_cidr_gw_df.tmp
-            sed -i -e "s/0:24/100/g" /home/cloud/config/client_cidr_gw.tmp
-            sed -i -e "s/0:24/1/g"  /home/cloud/config/client_cidr_gw_df.tmp
-            cd /home/cloud/
-            git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn-spawn-client/ansible/playbookclient.yml
+            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw.tmp
+            cp /home/cloud/config/server_cidr /home/cloud/config/server_cidr_gw_df.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw.tmp
+            sed -i -e "s/\//:/g"  /home/cloud/config/server_cidr_gw_df.tmp
+            sed -i -e "s/0:24/100/g" /home/cloud/config/server_cidr_gw.tmp
+            sed -i -e "s/0:24/1/g"  /home/cloud/config/server_cidr_gw_df.tmp
+            sudo route add -net "$client_cidr$"/24 gw $(cat /home/cloud/config/server_cidr_gw_df.tmp)
+            sudo route add -net "$client_cidr$"/24 gw $(cat /home/cloud/config/server_cidr_gw.tmp)
           params:
-            $client_cidr$: {get_param: client_cidr}
             $server_cidr$: {get_param: server_cidr}
-
+            $client_cidr$: {get_param: client_cidr}
 
   server_port:
     type: OS::Neutron::Port
@@ -132,6 +120,6 @@ resources:
 
 outputs:
 
-  client_private_ip:
-    description: IP address of server1 in private network
-    value: { get_attr: [ client, first_address ] }
+  server_private_ip:
+    description: IP address of client in private network
+    value: { get_attr: [ server, first_address ] }
